--- a/DemoCloudEndpoints/war/WEB-INF/web.xml
+++ b/DemoCloudEndpoints/war/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
     <init-param>
       <param-name>services</param-name>
-      <param-value>org.gonevertical.server.endpoints.UserEndpoint,org.gonevertical.server.endpoints.TaskEndpoint,org.gonevertical.server.endpoints.AnimalEndpoint</param-value>
+      <param-value>org.gonevertical.server.endpoints.SessionEndpoint,org.gonevertical.server.endpoints.UserEndpoint,org.gonevertical.server.endpoints.TaskEndpoint,org.gonevertical.server.endpoints.AnimalEndpoint</param-value>
     </init-param>
   </servlet>
   <servlet-mapping>
@@ -15,7 +15,7 @@
   </servlet-mapping>
   
   <!-- SSL -->
-  <security-constraint>
+<!--   <security-constraint>
     <web-resource-collection>
       <web-resource-name>SSL</web-resource-name>
       <url-pattern>/*</url-pattern>
@@ -23,7 +23,7 @@
     <user-data-constraint>
       <transport-guarantee>CONFIDENTIAL</transport-guarantee>
     </user-data-constraint>
-  </security-constraint>
+  </security-constraint> -->
   
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -36,15 +36,6 @@
   <servlet-mapping>
     <servlet-name>home</servlet-name>
     <url-pattern>/index.html</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>Session</servlet-name>
-    <servlet-class>org.gonevertical.server.servlet.SessionServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Session</servlet-name>
-    <url-pattern>/session</url-pattern>
   </servlet-mapping>
   
 </web-app>
